--- a/000_syllabus/000_syllabus_marketing_research_and_analytics_group_A.qmd
+++ b/000_syllabus/000_syllabus_marketing_research_and_analytics_group_A.qmd
@@ -315,21 +315,27 @@ tibble(Week = c(1:9),
 
 ## Activities and weights
 
--   **Primer corte**: 30%
+-   **Primer corte (3 weeks)**: 30%
 
     -   **Oral presentation marketing report part 1**: 30%
 
--   **Segundo corte**: 30%
+-   **Segundo corte (3 weeks)**: 30%
 
     -   **Oral presentation marketing report part 2**: 30%
 
--   **Tercer corte**: 40%
+-   **Tercer corte (3 weeks)**: 40%
 
     -   **Oral presentation marketing report part 3**: 40%
 
 ## Process in case of no presentation
 
--   Students who do not present an activity due to force majeure or illness, must send the respective excuse scanned through the [**luis.gomezl\@unimilitar.edu.co**](mailto:luis.gomezl@unimilitar.edu.co){.email}. If it is not sent, the note will be zero. Once the excuse has been satisfactorily received, the student should **not** present the activity and the corresponding grade will be equal to the immediately subsequent grade obtained in the next activity presented
+-   Students who are unable to attend an oral presentation due to force majeure or illness must submit a scanned copy of their official excuse to [**luis.gomezl\@unimilitar.edu.co**](mailto:luis.gomezl@unimilitar.edu.co){.email}. Failure to provide a valid excuse will result in a zero grade for the presentation.
+
+    -   If the excuse is approved, the absent student will be exempt from attending the oral presentation. Their grade will depend on their contribution to the group project:
+
+        -   If the group confirms the absent student actively participated in the project's development throughout the designated three-week period, they will receive the same grade as the rest of the group.
+
+        -   If the student was unable to participate due to the force majeure or illness, their grade will be equal to the grade they receive on the subsequent activity. If the absence occurred during the final oral presentation, their grade will be equal to the grade they receive on the second oral presentation. To receive this benefit, the student must actively participate in the development of at least 2 oral presentations.
 
 # Software
 
