--- a/006_comparing_groups_statistical_tests/006_comparing_groups_statistical_tests.qmd
+++ b/006_comparing_groups_statistical_tests/006_comparing_groups_statistical_tests.qmd
@@ -46,3 +46,27 @@ segmentation |>
   chisq_test(formula = subscribe ~ ownHome,
              correct = FALSE)
 ```
+
+# t-test: mean difference
+
+```{r}
+t_test <- t.test(formula = income ~ ownHome,
+                 alternative = "two.sided",
+                 mu = 0,
+                 # alpha = 1 - conf.level
+                 ## 0.05
+                 conf.level = 0.95,
+                 data = segmentation)
+
+t_test
+```
+
+# f-test: multiple mean difference
+
+```{r}
+anova_table_2_or_more_var <- aov(formula = income ~ Segment*ownHome,
+                                 data = segmentation) |> 
+  anova()
+
+anova_table_2_or_more_var
+```
